@@ -1,0 +1,5 @@
+{% extends "wagtailadmin/shared/header.html" %}
+
+{% block breadcrumb %}
+    {% include "modeladmin/includes/breadcrumb.html" %}
+{% endblock %}
