@@ -1,10 +1,11 @@
 {% extends "wagtailadmin/base.html" %}
-{% load i18n %}
+{% load i18n admin_static %}
 
 {% block titletag %}{{ view.get_meta_title }}{% endblock %}
 
 {% block extra_css %}
     {{ view.media.css }}
+    <link rel="stylesheet" href="{% static 'wagtailmodeladmin/css/breadcrumbs_page.css' %}" type="text/css"/>
 {% endblock %}
 
 {% block extra_js %}
@@ -12,12 +13,12 @@
 {% endblock %}
 
 {% block content %}
-    <div>
 
-        {% block header %}
-            {% include "modeladmin/includes/breadcrumb.html" %}
-            {% include "wagtailadmin/shared/header.html" with title=view.get_page_title subtitle=view.get_page_subtitle icon=view.header_icon %}
-        {% endblock %}
+    {% block header %}
+        {% include "modeladmin/includes/header_with_breadcrumb.html" with title=view.get_page_title subtitle=view.get_page_subtitle icon=view.header_icon tabbed=True %}
+    {% endblock %}
+
+    <div>
 
         {% block content_main %}
             <div class="nice-padding">
