@@ -8,6 +8,7 @@ Changelog
  * Added `annotate_score` support to PostgreSQL search backend (Bertrand Bordage)
  * Pillow's image optimisation is now applied when saving PNG images (Dmitry Vasilev)
  * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
+ * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
 
 
 2.1 (22.05.2018)
